refactor scheduler and add /jobs api
